# MindVault

./: .gitignore  HOW_TO_RUN.md  LICENSE  README.md  mindvault.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  publish.yml  release.yml  update-homebrew-formula.yml
Formula/: mindvault.rb
mindvault/: __init__.py  __main__.py  _cli.py  chat.py  config.py  council.py  generate_notes.py  ingest.py  modes.py  onboard.py  session_picker.py  tui.py  user_config.py  version.py
src/: category_discovery.py  export_detector.py  llm.py  models.py  pipeline.py
src/adapters/: anthropic.py  obsidian.py  pdf.py  web.py
src/ingestion/: chunker.py  embedder.py  store.py
src/memory/: consolidator.py  extractor.py  linker.py  retriever.py  store.py  time_filter.py
src/sessions/: manager.py
tests/: test_extractor.py  test_memory_store.py  test_retriever.py  test_sessions.py
web/: next.config.ts  package.json  server.py  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/version/: route.ts
web/static/: index.html
